--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
+@import url('https://api.fontshare.com/v2/css?f[]=clash-display@600,700&display=swap');
+
 @import "variables";
 @import "reset";
 @import "typography";
 @import "layout";
 @import "components";
-@import "responsive";
