--- a/templates/macros/pillar_cards.html
+++ b/templates/macros/pillar_cards.html
@@ -1,10 +1,10 @@
 {% macro render(pillars) %}
-<div class="grid grid--3">
+<div class="bento-grid">
   {% for pillar in pillars %}
-  <div class="card">
-    {% if pillar.icon %}<p class="card__icon">{{ pillar.icon }}</p>{% endif %}
-    <p class="card__title">{{ pillar.title }}</p>
-    <p class="card__text">{{ pillar.text }}</p>
+  <div class="{% if loop.index == 1 %}glass-card--featured{% else %}glass-card{% endif %} reveal-up reveal-delay-{{ loop.index }}">
+    {% if pillar.icon %}<p class="glass-card__icon">{{ pillar.icon }}</p>{% endif %}
+    <p class="glass-card__title">{{ pillar.title }}</p>
+    <p class="glass-card__text">{{ pillar.text }}</p>
   </div>
   {% endfor %}
 </div>
