--- a/templates/shortcodes/faq.html
+++ b/templates/shortcodes/faq.html
@@ -1,5 +1,8 @@
-<details class="faq__item">
-  <summary>{{ question }}</summary>
+<details class="faq__item glass-card">
+  <summary>
+    {{ question }}
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"/></svg>
+  </summary>
   <div class="faq__answer">
     {{ body }}
   </div>
