Add neutralitaet-frieden link to info.html nav

--- a/templates/info.html
+++ b/templates/info.html
@@ -28,6 +28,7 @@
         <a href="{{ get_url(path='@/research-innovation.md', lang=lang) }}">{{ trans(key="nav_research_innovation", lang=lang) }}</a>
         <a href="{{ get_url(path='@/energy-resilience.md', lang=lang) }}">{{ trans(key="nav_energy_resilience", lang=lang) }}</a>
         <a href="{{ get_url(path='@/offener-staat.md', lang=lang) }}">{{ trans(key="nav_offener_staat", lang=lang) }}</a>
+        <a href="{{ get_url(path='@/neutralitaet-frieden.md', lang=lang) }}">{{ trans(key="nav_neutralitaet_frieden", lang=lang) }}</a>
         <a href="{{ get_url(path='@/kein-links-rechts.md', lang=lang) }}">{{ trans(key="nav_kein_links_rechts", lang=lang) }}</a>
       </div>
       <div>
