--- a/templates/info.html
+++ b/templates/info.html
@@ -30,6 +30,7 @@
         <a href="{{ get_url(path='@/offener-staat.md', lang=lang) }}">{{ trans(key="nav_offener_staat", lang=lang) }}</a>
         <a href="{{ get_url(path='@/neutralitaet-frieden.md', lang=lang) }}">{{ trans(key="nav_neutralitaet_frieden", lang=lang) }}</a>
         <a href="{{ get_url(path='@/talent-integration.md', lang=lang) }}">{{ trans(key="nav_talent_integration", lang=lang) }}</a>
+        <a href="{{ get_url(path='@/sprache-verstaendigung.md', lang=lang) }}">{{ trans(key="nav_sprache_verstaendigung", lang=lang) }}</a>
         <a href="{{ get_url(path='@/kein-links-rechts.md', lang=lang) }}">{{ trans(key="nav_kein_links_rechts", lang=lang) }}</a>
       </div>
       <div>
